# quant-trading-system

./: .gitignore  QUICKSTART.md  README.md  STRATEGY_REFACTOR_COMPLETE.md  SYSTEM_OVERVIEW.md  TRADING_ENGINE_TAILWIND_REFACTOR.md  TRADING_ENGINE_UI_UPGRADED.md  UI_LAYOUT_OPTIMIZED.md  UPGRADE_COMPLETE.md  docker-compose.yml
backend/: alembic.ini  env.example  pyproject.toml  test_incremental_indicators.py
backend/alembic/: env.py
backend/alembic/versions/: 40494983073e_add_beijing_time_to_klines.py  51fa2931d920_add_market_type_to_klines.py  e4209ecb3f09_add_drawings_table.py
backend/app/: __init__.py  config.py  main.py
backend/app/ai/: __init__.py  signal_enhancer.py
backend/app/api/: rest.py  websocket.py
backend/app/core/: __init__.py  data_source.py  database.py  message_bus.py  node_base.py  position_config.py  position_manager.py  progress_tracker.py  strategy_config.py  strategy_registry.py  task_manager.py  trading_engine.py
backend/app/exchanges/: __init__.py  base.py  binance.py  interfaces.py
backend/app/indicators/: __init__.py  calculators.py
backend/app/models/: __init__.py  backtest.py  drawings.py  indicators.py  market_data.py  requests.py  signals.py
backend/backtest_results/: EXAMPLE_dual_ma_BTCUSDT_1h_20251110_120000.json
backend/config/: position_management.yaml  strategies.yaml
backend/migrations/: 001_create_trades_table.sql  002_add_ai_fields_to_signals.sql  003_create_backtest_runs_table.sql  add_market_type_to_indicators.sql  add_signal_side_action_fields.sql
backend/scripts/: run_backtest.py
chaos/: QUICKSTART.md  (+16 more)
(+121 files in other folders)
