[project]
name = "quant-trading-backend"
version = "0.1.0"
description = "Quantitative Trading System Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "redis[hiredis]>=5.0.1",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "ccxt>=4.1.50",
    "TA-Lib>=0.4.28",
    "pandas>=2.1.3",
    "numpy>=1.26.2",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "greenlet>=3.0.0",
    "optuna>=4.5.0",
    "openai>=2.7.1",
    "pyyaml>=6.0.1",
    "cachetools>=5.3.0",
    "scalar-fastapi>=1.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
